<resources>
    <string name="app_name">My Application</string>
    <string name="toppings">Toppings</string>
    <string name="hint">Name</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order: </string>
    <string name="clientName">Name: %1$s</string>
    <string name="addWhippedCream">Add whipped cream? </string>
    <string name="addChocolate">Add chocolate? </string>
    <string name="Quantity">Quantity: </string>
    <string name="total">Total: ￥</string>
    <string name="thankYou">Thank you!</string>
</resources>
